--- a/Config-MW/NFS_XtendedInput.ini
+++ b/Config-MW/NFS_XtendedInput.ini
@@ -7,6 +7,9 @@ DeadzonePercentLS = 0.24 // set the percentage of deadzone for each stick here (
 DeadzonePercentRS = 0.24
 DeadzonePercentLS_P2 = 0.24
 DeadzonePercentRS_P2 = 0.24
+DeadzonePercent_Shifting = 0.75 // deadzone for shifting digital activation
+DeadzonePercent_AnalogStickDigital = 0.50 // deadzone for analog sticks digital activation
+DeadzonePercent_AnalogTriggerDigital = 0.12 // same for triggers
 
 [Icons]
 ControllerIconMode = 0 // 0 = Xbox One, 1 = PlayStation 4
