--- a/NFS_XtendedInput.vcxproj.filters
+++ b/NFS_XtendedInput.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClInclude Include="NFS_XtendedInput_FEng.h" />
     <ClInclude Include="NFS_XtendedInput.h" />
     <ClInclude Include="NFS_XtendedInputButtons.h" />
+    <ClInclude Include="NFSC_XtendedInput.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
