add config entry

--- a/Config-MW/NFS_XtendedInput.ini
+++ b/Config-MW/NFS_XtendedInput.ini
@@ -14,6 +14,7 @@ DeadzonePercent_AnalogTriggerDigital = 0.12 // same for triggers
 [Icons]
 ControllerIconMode = 0 // 0 = Xbox One, 1 = PlayStation 4
 FirstControlDevice = 0 // 0 = Keyboard, 1 = Controller -- for setting the first state
+UseDynamicFEngSwitching = 1 // enable/disable dynamic FEng switching for button icons
 
 [Events]
 FRONTENDACTION_UP = XINPUT_GAMEPAD_DPAD_UP
