CB: add KB controls for crew activation

--- a/Config-Carbon/NFS_XtendedInput.ini
+++ b/Config-Carbon/NFS_XtendedInput.ini
@@ -122,6 +122,10 @@ GAMEACTION_GAMEBREAKER = X
 GAMEACTION_SHIFTUP = VK_LSHIFT
 GAMEACTION_SHIFTDOWN = VK_LCONTROL
 GAMEACTION_RESET = R
+GAMEACTION_CREWAGGRESSIVE = VK_RCONTROL
+GAMEACTION_CREWDEFENSIVE = VK_RCONTROL
+GAMEACTION_CREWDEFAULT = VK_RCONTROL
+GAMEACTION_CREWSPEED = VK_RCONTROL
 HUDACTION_PAUSEREQUEST = VK_ESCAPE
 HUDACTION_ENGAGE_EVENT = VK_RETURN
 HUDACTION_PAD_LEFT = M
