add skip NIS action to KB config

--- a/Config-Carbon/NFS_XtendedInput.ini
+++ b/Config-Carbon/NFS_XtendedInput.ini
@@ -131,6 +131,7 @@ HUDACTION_ENGAGE_EVENT = VK_RETURN
 HUDACTION_PAD_LEFT = M
 HUDACTION_PAD_RIGHT = VK_TAB
 HUDACTION_PAD_DOWN = B
+HUDACTION_SKIPNIS = VK_RETURN
 CAMERAACTION_CHANGE = C
 CAMERAACTION_LOOKBACK = L
 CAMERAACTION_PULLBACK = P
