ProStreet: prepare porting

--- a/NFS_XtendedInput.vcxproj.filters
+++ b/NFS_XtendedInput.vcxproj.filters
@@ -15,6 +15,7 @@
     <ClInclude Include="NFS_XtendedInput.h" />
     <ClInclude Include="NFS_XtendedInputButtons.h" />
     <ClInclude Include="NFSC_XtendedInput.h" />
+    <ClInclude Include="NFSPS_XtendedInput.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
