PS: add config + action defs

--- a/NFS_XtendedInput.vcxproj
+++ b/NFS_XtendedInput.vcxproj
@@ -258,11 +258,13 @@
   <ItemGroup>
     <None Include="Config-Carbon\NFS_XtendedInput.ini" />
     <None Include="Config-MW\NFS_XtendedInput.ini" />
+    <None Include="Config-ProStreet\NFS_XtendedInput.ini" />
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Config-Carbon\EventReference.txt" />
     <Text Include="Config-MW\EventReference.txt" />
+    <Text Include="Config-ProStreet\EventReference.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
