--- a/NFS_XtendedInput.vcxproj.filters
+++ b/NFS_XtendedInput.vcxproj.filters
@@ -16,6 +16,7 @@
     <ClInclude Include="NFS_XtendedInputButtons.h" />
     <ClInclude Include="NFSC_XtendedInput.h" />
     <ClInclude Include="NFSPS_XtendedInput.h" />
+    <ClInclude Include="NFSUC_XtendedInput.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
