add PS3 buttons & more configurable Xinput library

--- a/XtendedInputButtons/8A69054A.ini
+++ b/XtendedInputButtons/8A69054A.ini
@@ -1984,3 +1984,994 @@ ScaleT = 0
 PixelFormatUnk1 = 0x1
 PixelFormatUnk2 = 0x5
 PixelFormatUnk3 = 0x6
+
+[C5E3F9E6]
+File = XtendedInputButtons\PS3\PS3_CIRCLE.dds
+Name = PS3_CIRCLE
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[348FAE3E]
+File = XtendedInputButtons\PS3\PS3_CROSS.dds
+Name = PS3_CROSS
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[D30C9E8D]
+File = XtendedInputButtons\PS3\PS3_DPAD.dds
+Name = PS3_DPAD
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[79647BE4]
+File = XtendedInputButtons\PS3\PS3_DPAD_DOWN.dds
+Name = PS3_DPAD_DOWN
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[7968B237]
+File = XtendedInputButtons\PS3\PS3_DPAD_LEFT.dds
+Name = PS3_DPAD_LEFT
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[A6EDC0AA]
+File = XtendedInputButtons\PS3\PS3_DPAD_RIGHT.dds
+Name = PS3_DPAD_RIGHT
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[DE7ECED1]
+File = XtendedInputButtons\PS3\PS3_DPAD_UP.dds
+Name = PS3_DPAD_UP
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[C8AE8264]
+File = XtendedInputButtons\PS3\PS3_DPAD_X.dds
+Name = PS3_DPAD_X
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[C8AE8265]
+File = XtendedInputButtons\PS3\PS3_DPAD_Y.dds
+Name = PS3_DPAD_Y
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[739DFCD1]
+File = XtendedInputButtons\PS3\PS3_L1.dds
+Name = PS3_L1
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[739DFCD2]
+File = XtendedInputButtons\PS3\PS3_L2.dds
+Name = PS3_L2
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[739DFCD3]
+File = XtendedInputButtons\PS3\PS3_L3.dds
+Name = PS3_L3
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[243C9B32]
+File = XtendedInputButtons\PS3\PS3_LANALOG.dds
+Name = PS3_LANALOG
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[34D527A9]
+File = XtendedInputButtons\PS3\PS3_LANALOG_DOWN.dds
+Name = PS3_LANALOG_DOWN
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[34D95DFC]
+File = XtendedInputButtons\PS3\PS3_LANALOG_LEFT.dds
+Name = PS3_LANALOG_LEFT
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[D073E50F]
+File = XtendedInputButtons\PS3\PS3_LANALOG_RIGHT.dds
+Name = PS3_LANALOG_RIGHT
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[DFD7C556]
+File = XtendedInputButtons\PS3\PS3_LANALOG_UP.dds
+Name = PS3_LANALOG_UP
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[25D03C49]
+File = XtendedInputButtons\PS3\PS3_LANALOG_X.dds
+Name = PS3_LANALOG_X
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[25D03C4A]
+File = XtendedInputButtons\PS3\PS3_LANALOG_Y.dds
+Name = PS3_LANALOG_Y
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[739DFD97]
+File = XtendedInputButtons\PS3\PS3_R1.dds
+Name = PS3_R1
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[739DFD98]
+File = XtendedInputButtons\PS3\PS3_R2.dds
+Name = PS3_R2
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[739DFD99]
+File = XtendedInputButtons\PS3\PS3_R3.dds
+Name = PS3_R3
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[F21A07B8]
+File = XtendedInputButtons\PS3\PS3_RANALOG.dds
+Name = PS3_RANALOG
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[5A8957EF]
+File = XtendedInputButtons\PS3\PS3_RANALOG_DOWN.dds
+Name = PS3_RANALOG_DOWN
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[5A8D8E42]
+File = XtendedInputButtons\PS3\PS3_RANALOG_LEFT.dds
+Name = PS3_RANALOG_LEFT
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[ACAE1E15]
+File = XtendedInputButtons\PS3\PS3_RANALOG_RIGHT.dds
+Name = PS3_RANALOG_RIGHT
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[F8172C1C]
+File = XtendedInputButtons\PS3\PS3_RANALOG_UP.dds
+Name = PS3_RANALOG_UP
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[E0BAE24F]
+File = XtendedInputButtons\PS3\PS3_RANALOG_X.dds
+Name = PS3_RANALOG_X
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[E0BAE250]
+File = XtendedInputButtons\PS3\PS3_RANALOG_Y.dds
+Name = PS3_RANALOG_Y
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[EAEADF14]
+File = XtendedInputButtons\PS3\PS3_SELECT.dds
+Name = PS3_SHARE
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[EBC8E565]
+File = XtendedInputButtons\PS3\PS3_SQUARE.dds
+Name = PS3_SQUARE
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[0x35B21362]
+File = XtendedInputButtons\PS3\PS3_START.dds
+Name = PS3_START
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
+[1ED3DDCA]
+File = XtendedInputButtons\PS3\PS3_TRIANGLE.dds
+Name = PS3_TRIANGLE
+ClassNameHash = 0x1A93CF
+ShiftWidth = 5
+ShiftHeight = 5
+ImageCompressionType = 0x24
+PaletteCompressionType = 0x0
+NumPaletteEntries = 0
+TilableUV = 0
+BiasLevel = 0
+RenderingOrder = 5
+ScrollType = 0
+UsedFlag = 0
+ApplyAlphaSorting = 0
+AlphaUsageType = 2
+AlphaBlendType = 1
+Flags = 0x0
+MipmapBiasType = 0
+ScrollTimeStep = 0
+ScrollSpeedS = 0
+ScrollSpeedT = 0
+OffsetS = 0
+OffsetT = 256
+ScaleS = 256
+ScaleT = 0
+PixelFormatUnk1 = 0x1
+PixelFormatUnk2 = 0x5
+PixelFormatUnk3 = 0x6
+
