update todo, prepare World alpha

--- a/NFS_XtendedInput.vcxproj
+++ b/NFS_XtendedInput.vcxproj
@@ -410,6 +410,7 @@
     <None Include="Config-MW\NFS_XtendedInput.ini" />
     <None Include="Config-ProStreet\NFS_XtendedInput.ini" />
     <None Include="Config-UC\NFS_XtendedInput.ini" />
+    <None Include="Config-World\NFS_XtendedInput.ini" />
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
@@ -417,6 +418,7 @@
     <Text Include="Config-MW\EventReference.txt" />
     <Text Include="Config-ProStreet\EventReference.txt" />
     <Text Include="Config-UC\EventReference.txt" />
+    <Text Include="Config-World\EventReference.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
